src/pages/Login/Login.scss
@use "../../styles/partials/mixins" as *;
@use "../../styles/partials/variables" as *;

.login {
  align-items: center;
  display: flex;
  justify-content: center;
  height: calc(100vh - 8rem);
  position: relative;
  @include page;
  height: 90vh;

  &__outer-container {
    border: 20px solid yellow!important;
  }

  &__inner-container {
    @include card;
    border: 2px solid red;
    
    @media (min-width: 768px) {
      max-width: 80%;
      top: 3rem;
  
    }
  }
  
  
  &__title {
    
    @media (min-width: 768px) {

    }
  }
    color:#333;
    text-align: center;

  &__inner-container {
    align-items: center;
    display: flex;
    flex-direction: column;
    height: 70%;
    
    margin-top: 1rem;
    @media (min-width: 768px) {
      flex-direction: row;
      width: 100%;

    }
  }

  &__button {
    align-items: center;
    border-radius: 5px;
    color: white;
    cursor: pointer;
    display: flex;
    font-weight: bold;
    margin-bottom: 20px;
    margin-top: 2rem;
    padding: 15px 25px;
    width: 150px;
    justify-content: center;
    

    @media (min-width: 768px) {

    }

    &--google {
      background-color: #df4930;

      @media (min-width: 768px) {

      }
    }
    
    // &--facebook {
    //   background-color: #507cc0;

      // @media (min-width: 768px) {

      // }
    // }
  }
  
  &__button-icon {
    height: 20px;
    margin-right: 10px;
    width: 20px;

    @media (min-width: 768px) {

    }
  }
} 

.inner-container {

  &__left {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;

    @media (min-width: 768px) {

    }
  }

  &__right {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;

    @media (min-width: 768px) {

    }
  }
}

.or {
  align-items: center;
  display: flex;
  height: 100%;
  justify-content: center;
  position: relative;
  margin-bottom: 1rem;

  @media (min-width: 768px) {

  }
  
  &__text {
    background-color: white;
    border: 2px solid lightgray;
    border-radius: 50%;
    font-weight: bold;
    color: gray;
    padding: 10px;

    @media (min-width: 768px) {

    }
  }

  &__line {
    background-color: lightgray;
    bottom: 0;
    height: 60%;
    left: 0;
    margin: auto;
    position: absolute;
    right: 0;
    top: 0;
    width: 0.5px;
    z-index: -1;

    @media (min-width: 768px) {

    }
  }
}

.login-form {
  display: flex;
  flex-direction: column;

  @media (min-width: 768px) {

  }
  
  &__label {
    display: none;

    @media (min-width: 768px) {

    }

  }
  
  &__input {
    margin-bottom: 20px;
    padding: 15px 20px;
    width: 200px;

    @media (min-width: 768px) {

    }
  }
  
  &__submit{
    background: rgba(128, 0, 128, 0.671);
    border: none;
    border-radius: 5px;
    color: white;
    font-weight: bold;
    padding: 15px 20px;
    width: 200px;

    @media (min-width: 768px) {

    }
  }
}

.signup {
  
  &__link {
    margin-top: 1rem;
    cursor: pointer;
    text-decoration: underline;
    margin-bottom: 2rem;
    
    @media (min-width: 768px) {
      
    }
  }
}


.login__toast {
  margin-bottom: 25%;
  position: absolute;
}

